[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/Environment/Earth/EarthCannon.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Environment/Earth/EarthBack.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Environment/Earth/EarthFront.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Environment/Earth/Earth.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Environment/Earth/EarthCannonFlash.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/EarthCannonFlash.tres" type="Material" id=6]
[ext_resource path="res://Sprites/Environment/Earth/EarthFlash.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 67, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 134, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 201, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 268, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 335, 0, 67, 20 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 67, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 134, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 201, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 268, 0, 67, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 335, 0, 67, 20 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Earth" type="Node2D"]
position = Vector2( 254.941, 125.395 )
script = ExtResource( 4 )

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Gun" type="AnimatedSprite" parent="."]
position = Vector2( -1.33141, -33.531 )
rotation = 0.575959
frames = SubResource( 7 )

[node name="EarthFront" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="GunFlash" type="AnimatedSprite" parent="."]
position = Vector2( -1.3783, -33.5322 )
rotation = 0.575959
frames = SubResource( 14 )

[node name="EarthFlash" type="Sprite" parent="GunFlash"]
visible = false
position = Vector2( 19.4189, 27.3718 )
rotation = -0.575959
texture = ExtResource( 7 )

[node name="MovementTween" type="Tween" parent="."]

[node name="FlashTween" type="Tween" parent="."]

[node name="MuzzleFlash" type="Particles2D" parent="."]
modulate = Color( 1.2, 1.1, 1, 1 )
show_behind_parent = true
position = Vector2( -20.3993, -44.8101 )
rotation = 0.575959
emitting = false
amount = 20
one_shot = true
preprocess = 0.1
speed_scale = 2.7
explosiveness = 0.8
process_material = ExtResource( 6 )
[connection signal="frame_changed" from="Gun" to="." method="_on_Gun_frame_changed"]
